WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119181
RenderBoxModelObject::firstLetterRemainingText should be a RenderTextFragment*.
https://bugs.webkit.org/show_bug.cgi?id=119181
Summary
RenderBoxModelObject::firstLetterRemainingText should be a RenderTextFragment*.
Andreas Kling
Reported
2013-07-27 15:44:23 PDT
RenderBoxModelObject::firstLetterRemainingText should be a RenderTextFragment*.
Attachments
Patch
(5.54 KB, patch)
2013-07-27 15:56 PDT
,
Andreas Kling
sam
: review+
eflews.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(5.58 KB, patch)
2013-08-03 02:27 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-07-27 15:56:33 PDT
Created
attachment 207591
[details]
Patch
EFL EWS Bot
Comment 2
2013-07-27 16:11:26 PDT
Comment on
attachment 207591
[details]
Patch
Attachment 207591
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/1248574
Andreas Kling
Comment 3
2013-07-27 17:11:41 PDT
Comment on
attachment 207591
[details]
Patch Meh, the EFL EWS bot had some internal compiler error in GCC.
Darin Adler
Comment 4
2013-07-28 18:05:01 PDT
Comment on
attachment 207591
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=207591&action=review
> Source/WebCore/rendering/RenderBlock.cpp:6771 > + RenderTextFragment* remainingText = toRenderBoxModelObject(firstLetter)->firstLetterRemainingText(); > if (remainingText) {
Would be nice to define this inside the if so there’s no worry about null dereference if we use it later.
Andreas Kling
Comment 5
2013-08-03 02:27:09 PDT
Created
attachment 208060
[details]
Patch for landing
WebKit Commit Bot
Comment 6
2013-08-03 03:14:02 PDT
Comment on
attachment 208060
[details]
Patch for landing Clearing flags on attachment: 208060 Committed
r153688
: <
http://trac.webkit.org/changeset/153688
>
WebKit Commit Bot
Comment 7
2013-08-03 03:14:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug