RenderBoxModelObject::firstLetterRemainingText should be a RenderTextFragment*. <http://webkit.org/b/119181>

Reviewed by Sam Weinig.

De-generalize this code a bit since we know that the firstLetterRemainingText() is always
going to be a RenderTextFragment.

* rendering/RenderBoxModelObject.h:
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::firstLetterRemainingText):
(WebCore::RenderBoxModelObject::setFirstLetterRemainingText):

    Make these two deal in RenderTextFragment*.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::updateFirstLetterStyle):

    Tighten up some pointer types so we don't have to cast as much.


Canonical link: https://commits.webkit.org/137419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153688 268f45cc-cd09-0410-ab3c-d52691b4dbfc